--- a/postgres/docker-compose.yaml
+++ b/postgres/docker-compose.yaml
@@ -1,14 +1,15 @@
-version: '3.6'
+version: "3.6"
 name: pg-demo
 services:
   postgres:
     image: postgres
     restart: always
     ports:
-    - "5432:5432"
+      - "15432:15432"
+    command: -p 15432
     volumes:
-    - db_data:/var/lib/postgresql/data
-    - ./data-init/pg/:/docker-entrypoint-initdb.d/
+      - db_data:/var/lib/postgresql/data
+      - ./data-init/pg/:/docker-entrypoint-initdb.d/
     environment:
       POSTGRES_PASSWORD: postgrespassword
     healthcheck:
@@ -20,11 +21,11 @@ services:
     image: redis
     restart: always
     healthcheck:
-      test: ["CMD", "redis-cli","ping"]
+      test: ["CMD", "redis-cli", "ping"]
   hge-orders:
     image: hasura/graphql-engine:latest
     ports:
-    - "8014:8080"
+      - "18014:8080"
     depends_on:
       postgres:
         condition: service_healthy
@@ -35,7 +36,7 @@ services:
       HASURA_GRAPHQL_EE_LICENSE_KEY: ${HASURA_GRAPHQL_EE_LICENSE_KEY}
       HASURA_GRAPHQL_ADMIN_SECRET: myadminsecretkey
       ## The metadata database for this Hasura GraphQL project. Can be changed to a managed postgres instance
-      HASURA_GRAPHQL_METADATA_DATABASE_URL: postgres://postgres:postgrespassword@postgres:5432/hge_metadata_orders
+      HASURA_GRAPHQL_METADATA_DATABASE_URL: postgres://postgres:postgrespassword@postgres:15432/hge_metadata_orders
       HASURA_GRAPHQL_MIGRATIONS_SERVER_TIMEOUT: 30
       ## Optional settings:
       HASURA_GRAPHQL_REDIS_URL: redis://redis:6379
@@ -54,7 +55,7 @@ services:
   hge-crm:
     image: hasura/graphql-engine:latest
     ports:
-    - "8013:8080"
+      - "18013:8080"
     depends_on:
       postgres:
         condition: service_healthy
@@ -65,7 +66,7 @@ services:
       HASURA_GRAPHQL_EE_LICENSE_KEY: ${HASURA_GRAPHQL_EE_LICENSE_KEY}
       HASURA_GRAPHQL_ADMIN_SECRET: myadminsecretkey
       ## The metadata database for this Hasura GraphQL project. Can be changed to a managed postgres instance
-      HASURA_GRAPHQL_METADATA_DATABASE_URL: postgres://postgres:postgrespassword@postgres:5432/hge_metadata_crm
+      HASURA_GRAPHQL_METADATA_DATABASE_URL: postgres://postgres:postgrespassword@postgres:15432/hge_metadata_crm
       HASURA_GRAPHQL_MIGRATIONS_SERVER_TIMEOUT: 30
       ## Optional settings:
       HASURA_GRAPHQL_REDIS_URL: redis://redis:6379
@@ -84,7 +85,7 @@ services:
   hge-hr:
     image: hasura/graphql-engine:latest
     ports:
-    - "8012:8080"
+      - "18012:8080"
     depends_on:
       postgres:
         condition: service_healthy
@@ -95,9 +96,9 @@ services:
       HASURA_GRAPHQL_EE_LICENSE_KEY: ${HASURA_GRAPHQL_EE_LICENSE_KEY}
       HASURA_GRAPHQL_ADMIN_SECRET: myadminsecretkey
       ## The metadata database for this Hasura GraphQL project. Can be changed to a managed postgres instance
-      HASURA_GRAPHQL_METADATA_DATABASE_URL: postgres://postgres:postgrespassword@postgres:5432/hge_metadata_hr
+      HASURA_GRAPHQL_METADATA_DATABASE_URL: postgres://postgres:postgrespassword@postgres:15432/hge_metadata_hr
       HASURA_GRAPHQL_MIGRATIONS_SERVER_TIMEOUT: 30
-     ## Optional settings:
+      ## Optional settings:
       HASURA_GRAPHQL_REDIS_URL: redis://redis:6379
       ## enable the console served by server
       HASURA_GRAPHQL_ENABLE_CONSOLE: true
@@ -115,28 +116,28 @@ services:
   hge-main:
     image: hasura/graphql-engine:latest
     ports:
-    - "8011:8080"
+      - "18011:8080"
     depends_on:
       postgres:
-          condition: service_healthy
+        condition: service_healthy
       redis:
         condition: service_healthy
       hge-orders:
-          condition: service_healthy
+        condition: service_healthy
       hge-crm:
-          condition: service_healthy
+        condition: service_healthy
     restart: always
     environment:
       HASURA_GRAPHQL_EE_LICENSE_KEY: ${HASURA_GRAPHQL_EE_LICENSE_KEY}
       HASURA_GRAPHQL_ADMIN_SECRET: myadminsecretkey
       ## The metadata database for this Hasura GraphQL project. Can be changed to a managed postgres instance
-      HASURA_GRAPHQL_METADATA_DATABASE_URL: postgres://postgres:postgrespassword@postgres:5432/hge_metadata_main
+      HASURA_GRAPHQL_METADATA_DATABASE_URL: postgres://postgres:postgrespassword@postgres:15432/hge_metadata_main
       HASURA_GRAPHQL_MIGRATIONS_SERVER_TIMEOUT: 30
       ## Optional setting
       HASURA_GRAPHQL_REDIS_URL: redis://redis:6379
       HASURA_GRAPHQL_JWT_SECRET: |
         {
-          "claims_namespace": "sessionvars",
+          "claims_namespace": "https://hasura.io/jwt/claims",
           "key": "hasura-hs384-secret-tKc*ruT!Rt.NR8!osNsKqCyzXTDtZ*8kUxg",
           "claims_map": {
             "x-hasura-allowed-roles": {
@@ -160,6 +161,7 @@ services:
       HASURA_GRAPHQL_ENABLED_LOG_TYPES: startup, http-log, webhook-log, websocket-log, query-log
       HASURA_GRAPHQL_EXPERIMENTAL_FEATURES: streaming_subscriptions
       HASURA_GRAPHQL_CONSOLE_ASSETS_DIR: /srv/console-assets
+      HASURA_GRAPHQL_ENABLED_APIS: metadata,graphql,config,metrics
     healthcheck:
       test: bash -c ':> /dev/tcp/0.0.0.0/8080' || exit 1
       interval: 5s
